--- a/404.html
+++ b/404.html
@@ -141,6 +141,10 @@
     <li><a href="http://www.boziuk.com/post/">Posts</a></li>
   </ul>
   
+  <ul>
+    <li><a href="http://www.boziuk.com/post/APS-GFM/">American Physical Society Division of Fluid Dynamics Gallery of Fluid Motion</a></li>
+  </ul>
+  
 
   <h2>Recent Publications</h2>
   
