trying to fix linked in pic

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
       
       <div class="portrait" itemprop="image"
-           style="background-image: url('/img/Linked%20In%20Pic.jpg');">
+           style="background-image: url('/img/LinkedInPic.jpg');">
       </div>
       
 
