--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
       
       <div class="portrait" itemprop="image"
-           style="background-image: url('/img/LinkedInPic.jpg');">
+           style="background-image: url('/img/portrait_scaled.jpg');">
       </div>
       
 
