--- a/404.html
+++ b/404.html
@@ -150,11 +150,27 @@
   <h2>Recent Publications</h2>
   
   <ul>
+    <li><a href="http://www.boziuk.com/publication/enhanced-condensation-ultrasound-therminic/">Enhanced Two-Phase Heat Transfer by Direct-Contact Condensation Using Directional Acoustic Actuation</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="http://www.boziuk.com/publication/enhanced-condensation-capillary-ijhmt/">Acoustic enhancement of direct-contact condensation using capillary waves</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="http://www.boziuk.com/publication/enhanced-boiling-ijhmt/">Enhanced boiling heat transfer on plain and featured surfaces using acoustic actuation</a></li>
   </ul>
   
   <ul>
     <li><a href="http://www.boziuk.com/publication/">Publications</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="http://www.boziuk.com/publication/enhanced-boiling-textured-itherm/">Enhanced boiling heat transfer on micromachined surfaces using acoustic actuation</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="http://www.boziuk.com/publication/enhanced-boiling-physoffluid/">Acoustically enhanced boiling heat transfer </a></li>
   </ul>
   
 
