--- a/publication_types/index.html
+++ b/publication_types/index.html
@@ -143,6 +143,13 @@
   
   
   <div>
+    <h2><a href="http://www.boziuk.com/publication_types/1/">1</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="http://www.boziuk.com/publication_types/2/">2</a></h2>
     <div class="article-style">
       
