Update personal projects page

--- a/project/various-personal/index.html
+++ b/project/various-personal/index.html
@@ -192,8 +192,12 @@
       <p>Some other personal projects of interest:</p>
 
 <ul>
-<li>Sound board app with numpad keybinds. Useful for adding sound effects when recording, if the system sound is routed to an input (i.e., using jack, Cadence, Ardour, and other packages from the <a href="https://kx.studio" target="_blank">KXStudio project</a>.)<br />
-<a href="https://github.com/thomasboziuk/soundboard" target="_blank">https://github.com/thomasboziuk/soundboard</a></li>
+<li><p>Sound board app with numpad keybinds. Useful for adding sound effects when recording, if the system sound is routed to an input (i.e., using jack, Cadence, Ardour, and other packages from the <a href="https://kx.studio" target="_blank">KXStudio project</a>.)<br />
+<a href="https://github.com/thomasboziuk/soundboard" target="_blank">https://github.com/thomasboziuk/soundboard</a></p></li>
+
+<li><p>&ldquo;Muse Finder&rdquo; function set, reminiscent of weird websites from the 90&rsquo;s. Based on someone&rsquo;s birthday, you are able to find their &ldquo;muses.&rdquo;<br />
+Who are someone&rsquo;s muses? Well, they&rsquo;re the two leading actors, of the top grossing movie, of the box-office week they were born. <em>Obviously!</em><br />
+<a href="https://github.com/thomasboziuk/muse_finder" target="_blank">https://github.com/thomasboziuk/muse_finder</a></p></li>
 </ul>
 
     </div>
