correcting github link

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         
         
         <li>
-          <a href="www.linkedin.com/in/thomas-boziuk" target="_blank">
+          <a href="https://www.linkedin.com/in/thomas-boziuk" target="_blank">
             <i class="fa fa-linkedin big-icon"></i>
           </a>
         </li>
