updating FMRL url link

--- a/project/other-fmrl/index.html
+++ b/project/other-fmrl/index.html
@@ -189,7 +189,7 @@
     </div>
 
     
-    <a class="btn btn-primary btn-outline" href="http://www.fmrl.gatech.edu" target="_blank">Go to Project Site</a>
+    <a class="btn btn-primary btn-outline" href="http://fmrl.gatech.edu" target="_blank">Go to Project Site</a>
     
 
     <div class="article-style" itemprop="articleBody">
