--- a/index.html
+++ b/index.html
@@ -650,13 +650,13 @@
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-6 project-item isotope-item mech-eng">
         <div class="card">
           
-          <a href="http://www.fmrl.gatech.edu" title="" class="card-image hover-overlay"
+          <a href="http://fmrl.gatech.edu" title="" class="card-image hover-overlay"
              target="_blank">
             <img src="/img/boards.jpg" alt="" class="img-responsive">
           </a>
           
           <div class="card-text">
-            <h4><a href="http://www.fmrl.gatech.edu" target="_blank">Other FMRL Projects</a></h4>
+            <h4><a href="http://fmrl.gatech.edu" target="_blank">Other FMRL Projects</a></h4>
             <div class="card-desription">
               <p>Explore the varied FMRL projects from Dr. Glezer&rsquo;s lab at Georgia Tech.</p>
             </div>
