adding posts for cs50x project

--- a/404.html
+++ b/404.html
@@ -141,6 +141,10 @@
   <h2>Recent Posts</h2>
   
   <ul>
+    <li><a href="http://www.boziuk.com/post/cs50review/">CS50x: A Brief Review</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="http://www.boziuk.com/post/weathercollectionframework8/">Scratchwork.xyz, Part 8: Wrapping up, extending capabilities</a></li>
   </ul>
   
