--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
 <h1 id="biography">Biography</h1>
 
-<p>I&rsquo;m a researcher, primarily interested in the enhancement of two-phase heat transfer, and an educator, interested in effective teaching of the thermal-fluid sciences. Formerly, I was a graduate student in the school of mechanical engineering at the Georgia Institute of Technology, where I was a member of the Fluid Mechanics Research Laboratory under the direction of Dr. Ari Glezer beginning in 2009. Now, I&rsquo;m a post-doc!</p>
+<p>I&rsquo;m a researcher, primarily interested in the enhancement of two-phase heat transfer, and a scientist, interested in learning more about whatever aspect of this wonderful world has currently caught my attention. Formerly, I was a graduate student in the school of mechanical engineering at the Georgia Institute of Technology, where I was a member of the Fluid Mechanics Research Laboratory under the direction of Dr. Ari Glezer beginning in 2009. Now, I&rsquo;m a post-doc!</p>
 
 <p>My research work focuses on experimental investigation on the use of acoustic actuation as a method for enhancing the phase-change heat transfer processes of boiling and condensation. In both cases, significant enhancement is achievable using low-power acoustic actuators, and could be incorporated in energy generation or process engineering applications.</p>
 
