Adding publication; updating location and description

--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -145,6 +145,13 @@
   
   
   <div>
+    <h2><a href="http://www.boziuk.com/publication/enhanced-condensation-ultrasound-pof/">Dynamics of vapor bubble condensation under directional ultrasonic actuation</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="http://www.boziuk.com/publication/enhanced-condensation-capillary-ijhmt/">Acoustic enhancement of direct-contact condensation using capillary waves</a></h2>
     <div class="article-style">
       
