--- a/404.html
+++ b/404.html
@@ -192,6 +192,10 @@
   <h2>Recent Publications</h2>
   
   <ul>
+    <li><a href="http://www.boziuk.com/publication/enhanced-condensation-ultrasound-pof/">Dynamics of vapor bubble condensation under directional ultrasonic actuation</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="http://www.boziuk.com/publication/enhanced-condensation-ultrasound-therminic/">Enhanced Two-Phase Heat Transfer by Direct-Contact Condensation Using Directional Acoustic Actuation</a></li>
   </ul>
   
